--- a/README.me
+++ b/README.me
@@ -1,1 +1,22 @@
-
+# Check_hp_p2000 HP存储监控
+#### 说明：
+		本插件为Nagios监控HP存储P200的相关信息，可监控基本存储硬件状态、温度传感等。总之是一个比较全面的监控插件
+		
+		监控项目:
+		1、status    基本信息状态
+		2、disk       磁盘状态
+		3、expander   扩展状态
+		4、controller    控制器
+		5、named-volume    监控具体卷名
+		6、named-vdisk        监控具体虚拟磁盘
+		7、vdisk        所有虚拟磁盘
+		8、volume    卷
+		9、sensor      传感器
+		10、events    日志事件
+#### 版本控制
+		2017-7-22   V1.0  基础版本
+#### 使用：
+		使用方法查看博客详细说明
+		https://www.qnjslm.com
+#### 关于作者：
+			作者很懒、没什么可写的
