--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-# Check_hp_p2000 HP存储监控
+﻿# Check_hp_p2000 HP存储监控
 #### 说明：
 		本插件为Nagios监控HP存储P200的相关信息，可监控基本存储硬件状态、温度传感等。总之是一个比较全面的监控插件
 		
@@ -17,6 +17,6 @@
 		2017-7-22   V1.0  基础版本
 #### 使用：
 		使用方法查看博客详细说明
-		https://www.qnjslm.com
+		https://www.qnjslm.com/ITHelp/196.html
 #### 关于作者：
 			作者很懒、没什么可写的
